<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.krmdemo.restinfo</groupId>
  <artifactId>restinfo-parent-pom</artifactId>
  <version>1.0</version>
  <packaging>pom</packaging>

  <name>${project.artifactId}</name>
  <description>'rest-info' parent project</description>
  <url>https://github.com/krm-demo/rest-info</url>

  <organization>
    <name>krm-demo/rest-info</name>
    <url>https://github.com/krm-demo/rest-info</url>
  </organization>

  <properties>
    <java.version>21</java.version>
    <lombock.version>1.18.30</lombock.version>
    <maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <maven.resources.plugin.version>3.3.0</maven.resources.plugin.version>
    <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies/>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombock.version}</version>
        <optional>true</optional>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
          <configuration>
            <release>${maven.compiler.release}</release>
            <compilerArgument>-proc:full</compilerArgument>
            <annotationProcessorPaths>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven.resources.plugin.version}</version>
          <configuration>
            <propertiesEncoding>${project.build.sourceEncoding}</propertiesEncoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven.jar.plugin.version}</version>
          <configuration>
            <archive>
              <manifest>
                <addClasspath>false</addClasspath>
                <addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              </manifest>
              <manifestEntries>
                <Build-Date>${maven.build.timestamp}</Build-Date>
                <Project-Group>${project.groupId}</Project-Group>
                <Project-Org-Url>${project.organization.url}</Project-Org-Url>
                <Project-Url>${project.url}</Project-Url>
                <Env-Path>${env.PATH}</Env-Path>
                <Env-Pwd>${env.PWD}</Env-Pwd>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>git-hub</id>
      <activation>
        <property>
          <name>env.GITHUB_SERVER_URL</name>
        </property>
      </activation>
      <distributionManagement>
        <repository>
          <id>github</id>
          <name>Git-Hub Packages</name>
          <url>https://maven.pkg.github.com/krm-demo/rest-info</url>
        </repository>
      </distributionManagement>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jar-plugin</artifactId>
              <configuration>
                <archive>
                  <manifestEntries>
                    <Project-Build-Url>${env.GITHUB_SERVER_URL}/${env.GITHUB_REPOSITORY}/actions/runs/${env.GITHUB_RUN_ID}</Project-Build-Url>
                    <Project-Commit-Url>${env.GITHUB_SERVER_URL}/${env.GITHUB_REPOSITORY}/commit/${env.GITHUB_SHA}</Project-Commit-Url>
                  </manifestEntries>
                  <manifestSections>
                    <manifestSection>
                      <name>git-hub</name>
                      <manifestEntries>
                        <Github-Server-Url>${env.GITHUB_SERVER_URL}</Github-Server-Url>
                        <Github-Server-Repository>${env.GITHUB_REPOSITORY}</Github-Server-Repository>
                        <Github-Sha>${env.GITHUB_SHA}</Github-Sha>
                        <Github-Ref>${env.GITHUB_REF}</Github-Ref>
                        <Github-Ref-Name>${env.GITHUB_REF_NAME}</Github-Ref-Name>
                        <Github-Ref-Type>${env.GITHUB_REF_TYPE}</Github-Ref-Type>
                        <Github-Head-Ref>${env.GITHUB_HEAD_REF}</Github-Head-Ref>
                        <Github-Run-Id>${env.GITHUB_RUN_ID}</Github-Run-Id>
                        <Github-Run-Attempt>${env.GITHUB_RUN_ATTEMPT}</Github-Run-Attempt>
                        <Github-Run-Number>${env.GITHUB_RUN_NUMBER}</Github-Run-Number>
                        <Github-Workflow>${env.GITHUB_WORKFLOW}</Github-Workflow>
                        <Github-Workflow-Event>${env.GITHUB_EVENT_NAME}</Github-Workflow-Event>
                        <Github-Workflow-Job>${env.GITHUB_JOB}</Github-Workflow-Job>
                        <Github-Workflow-Ref>${env.GITHUB_WORKFLOW_REF}</Github-Workflow-Ref>
                        <Github-Workflow-Sha>${env.GITHUB_WORKFLOW_SHA}</Github-Workflow-Sha>
                      </manifestEntries>
                    </manifestSection>
                  </manifestSections>
                </archive>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
  </profiles>

  <modules>
    <module>rest-info-lib-maven</module>
    <module>rest-info-app-maven</module>
  </modules>

</project>

<!--
//    CI=true
//
//    GITHUB_ACTOR ('krm-demo')
//    GITHUB_TRIGGERING_ACTOR ('krm-demo')
//    GITHUB_REPOSITORY_OWNER_ID ('149853618')
//
//BITBUCKET_BRANCH=master
//BITBUCKET_BUILD_NUMBER=71
//BITBUCKET_COMMIT=8f94bf48cfcffca4b6c8107c558dfe11b453c23a
//BITBUCKET_DEPLOYMENT_ENVIRONMENT=hello-gradle
//BITBUCKET_GIT_HTTP_ORIGIN=http://bitbucket.org/aleksey-kurmanov/docker-pipelines
//BITBUCKET_GIT_SSH_ORIGIN=git@bitbucket.org:aleksey-kurmanov/docker-pipelines.git
//BITBUCKET_REPO_FULL_NAME=aleksey-kurmanov/docker-pipelines
//BITBUCKET_REPO_OWNER=aleksey-kurmanov
//BITBUCKET_REPO_OWNER_UUID={afc0fd5b-5907-44ef-9468-3f8cae7708c3}
//BITBUCKET_REPO_SLUG=docker-pipelines
//BITBUCKET_STEP_RUN_NUMBER=1
//BITBUCKET_STEP_TRIGGERER_UUID={afc0fd5b-5907-44ef-9468-3f8cae7708c3}
//BITBUCKET_STEP_UUID={7f3bb13c-166f-4d61-8b2b-84e9b021877a}
-->
